--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "upstream": {
         "license": "AGPL-3.0",
         "website": "https://example.com",
-        "demo": "https://demo.example.com",
+        "demo": "https://librex.beparanoid.de",
         "admindoc": "https://github.com/hnhx/librex/wiki",
         "code": "https://github.com/hnhx/librex"
     },
